--- a/index.html
+++ b/index.html
@@ -864,7 +864,7 @@
 		</figure>
 	</div>
 	
-	<div class="container content level-item level-left">
+	<div class="container content level-item">
 		<p>
 			There are <a href="https://github.com/nextcloud/nextcloudpi/releases">preinstalled SD card images</a> for the Raspberry Pi and other Single Board Computers.
 		</p>
