--- a/index.html
+++ b/index.html
@@ -838,22 +838,28 @@
 	</div>
 	
 <section class="section" id="debian-installation">
-	<div class="container content level-item level-left">
+	<div class="container content">
+	<div class="block level-item level-left">
 		<p id="debian-installation" class="title" style="font-size: 22.4px;">
 			Debian
 		</p>
 	</div>
 
-	<div class="container content level-item">
+	<div class="block content level-item">
 		<figure class="image">
 			<img src="images/openlogo-nd-100.png">
 		</figure>
 	</div>
 
-	<div class="container content level-item">
+	<div class="block content level-item">
 		<p>
 			You can install NextcloudPi in any Debian Buster system, by using the curl installer.
 		</p>		
+	</div>
+	<div class="block content level-item">
+		<p style="font-style: italic;">
+			Note: This assumes a clean Debian installation, there is currently no rollback method.
+		</p>
 	</div>
 	
 	<div class="container content level-item">
@@ -864,6 +870,7 @@
 		<p>
 			Instead of piping to bash, you can <a href="https://github.com/nextcloud/nextcloudpi.git">inspect the code</a> and launch it manually.
 		</p>
+	</div>
 	</div>
 </section>
 
