--- a/index.html
+++ b/index.html
@@ -25,32 +25,33 @@
 </head>
 
 <body>
+<div class="container" id="all-content">
+
 <header>
-<nav class="navbar" role="navigation" aria-label="main navigation" style="background: url('./images/bg-blue.png');">
-<div class="container">
-    
-<a role="button" class="navbar-burger" id="burger-menu" data-target="navMenu" aria-label="menu" aria-expanded="false">
-  <span aria-hidden="true"></span>
-  <span aria-hidden="true"></span>
-  <span aria-hidden="true"></span>
-</a>
-<div class="navbar-menu" id="navMenu" style="background: url('./images/bg-blue.png');">
-  <!-- navbar-start, navbar-end... -->
-      <div class="navbar-end">
-        <div class="navbar-item">
-        <div class="level-item">
-          <div class="buttons">
-            <a class="button is-dark" href="https://github.com/nextcloud/nextcloudpi.git">Github</a>
-            <a class="button is-link" href="https://github.com/nextcloud/nextcloudpi/releases">Download</a>
-            <a class="button is-primary" href="https://help.nextcloud.com/t/index-nextcloudpi-documentation/126448#welcome-to-the-nextcloudpi-wiki-1">Documentation</a>
-          </div>
-        </div>
-        </div>
-      </div>
-</div>
-      
-    </div>
-</nav>
+	<nav class="navbar" role="navigation" aria-label="main navigation" style="background: url('./images/bg-blue.png');">
+		<div class="container">
+			<a role="button" class="navbar-burger" id="burger-menu" data-target="navMenu" aria-label="menu" aria-expanded="false">
+				<span aria-hidden="true"></span>
+				<span aria-hidden="true"></span>
+				<span aria-hidden="true"></span>
+			</a>
+			
+		<div class="navbar-menu" id="navMenu" style="background: url('./images/bg-blue.png');">
+		<!-- navbar-start, navbar-end... -->
+			<div class="navbar-end">
+				<div class="navbar-item">
+				<div class="level-item">
+				<div class="buttons">
+					<a class="button is-dark" href="https://github.com/nextcloud/nextcloudpi.git">Github</a>
+					<a class="button is-link" href="https://github.com/nextcloud/nextcloudpi/releases">Download</a>
+					<a class="button is-primary" href="https://help.nextcloud.com/t/index-nextcloudpi-documentation/126448#welcome-to-the-nextcloudpi-wiki-1">Documentation</a>
+				</div>
+				</div>
+				</div>
+			</div>
+		</div>
+		</div>
+	</nav>
 
 <section class="hero is-fullheight-with-navbar" style="background: url('./images/bg-blue.png');">
   <div class="hero-body">
@@ -59,12 +60,12 @@
 		  <div class="columns">
 			  <div class="column"></div>
 			  <div class="column">
-		<figure class="image">
-			<img class="has-ratio" width="400" height="282" src="images/Nextcloud-Pi-white.png">
-		</figure>
-		</div>
-		<div class="column"></div>
-		</div>
+				  <figure class="image">
+					  <img class="has-ratio" width="400" height="282" src="images/Nextcloud-Pi-white.png">
+					</figure>
+				</div>
+				<div class="column"></div>
+			</div>
 	  </div>
 
 <section class="section">
@@ -929,5 +930,6 @@
 </footer>
 
 <script type="text/javascript" src="js/dynamics.js"></script>
+</div>
 </body>
 </html>
