--- a/index.html
+++ b/index.html
@@ -854,7 +854,7 @@
 
 	<div class="block content level-item">
 		<p>
-			You can install NextcloudPi in any Debian Buster system, by using the curl installer.
+			You can install NextcloudPi in any Debian Bullseye system, by using the curl installer.
 		</p>		
 	</div>
 	<div class="block content level-item">
