custom.css: Improve display on widescreen and nav menu

--- a/index.html
+++ b/index.html
@@ -21,11 +21,10 @@
 		  integrity="sha512-HqxHUkJM0SYcbvxUw5P60SzdOTy/QVwA1JJrvaXJv4q7lmbDZCmZaqz01UPOaQveoxfYRv1tHozWGPMcuTBuvQ=="
 		  crossorigin="anonymous"
 		  referrerpolicy="no-referrer" />
-	<style></style>
+	<link rel="stylesheet" href="style/custom.css" />
 </head>
 
 <body>
-<div class="container" id="all-content">
 
 <header>
 	<nav class="navbar" role="navigation" aria-label="main navigation" style="background: url('./images/bg-blue.png');">
@@ -36,12 +35,12 @@
 				<span aria-hidden="true"></span>
 			</a>
 			
-		<div class="navbar-menu" id="navMenu" style="background: url('./images/bg-blue.png');">
+		<div class="navbar-menu" id="navMenu">
 		<!-- navbar-start, navbar-end... -->
 			<div class="navbar-end">
 				<div class="navbar-item">
 				<div class="level-item">
-				<div class="buttons">
+				<div class="buttons" id="menu-buttons">
 					<a class="button is-dark" href="https://github.com/nextcloud/nextcloudpi.git">Github</a>
 					<a class="button is-link" href="https://github.com/nextcloud/nextcloudpi/releases">Download</a>
 					<a class="button is-primary" href="https://help.nextcloud.com/t/index-nextcloudpi-documentation/126448#welcome-to-the-nextcloudpi-wiki-1">Documentation</a>
@@ -108,6 +107,7 @@
   </div>
 </section>
 </header>
+<div class="container" id="all-content">
 
 <section class="section" id="highlights_content">
 <div class="container" id="highlights-content-container">
@@ -162,7 +162,7 @@
 			</div>
 		</div>
 	</nav>
-	
+
 	<nav class="level">
 		<div class="container has-text-centered">
 			<div class="columns">
