Fix background-size of header

--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
 <body>
 
 <header>
-	<nav class="navbar" role="navigation" aria-label="main navigation" style="background: url('./images/bg-blue.png');">
+	<nav class="navbar" role="navigation" aria-label="main navigation"
+		 style="background: url('./images/bg-blue.png'); background-size: cover;">
 		<div class="container">
 			<a role="button" class="navbar-burger" id="burger-menu" data-target="navMenu" aria-label="menu" aria-expanded="false">
 				<span aria-hidden="true"></span>
