index.html: Update documentation URL

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 				<div class="buttons" id="menu-buttons">
 					<a class="button is-dark" href="https://github.com/nextcloud/nextcloudpi.git">Github</a>
 					<a class="button is-link" href="https://github.com/nextcloud/nextcloudpi/releases">Download</a>
-					<a class="button is-primary" href="https://help.nextcloud.com/t/index-nextcloudpi-documentation/126448#welcome-to-the-nextcloudpi-wiki-1">Documentation</a>
+					<a class="button is-primary" href="https://docs.nextcloudpi.com">Documentation</a>
 				</div>
 				</div>
 				</div>
