index.html: Update install.sh URL

--- a/index.html
+++ b/index.html
@@ -870,7 +870,7 @@
 	
 	<div class="container content level-item">
 		<p>
-			Instead of piping to bash, you can <a href="https://github.com/nextcloud/nextcloudpi.git">inspect the code</a> and launch it manually.
+			Instead of piping to bash, you can <a href="https://github.com/nextcloud/nextcloudpi/blob/master/install.sh">inspect the code</a> and launch it manually.
 		</p>
 	</div>
 	</div>
